[metadata]
# replace with your username:
name = py4geo
version = 1.0.1
author = Manuele Pesenti
author_email = manuele@inventati.org
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
; url = https://github.com/pypa/sampleproject
; project_urls =
;     Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    ; License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    mptools
    overpy
    shapely
    ujson
    pyproj
    mercantile
    lxml
    geojson
    hashids
    tqdm
    geomet
    h3
    py4vtile

[options.packages.find]
where = src
